--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "chalk": "^4.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^17.3.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
